<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".screen.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Toolbar -->
        <LinearLayout
            android:id="@+id/toolbar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center"
            >
            <ImageView
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_menu"
                android:layout_gravity="start"
                android:id="@+id/toolbar_menu"
                android:layout_width="50dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/text_img_content" />
            <ImageView
                android:src="@drawable/logo_duckfood_ngang_toolbar"
                android:layout_gravity="center"
                android:id="@+id/toolbar_logo"
                android:layout_width="200dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/text_img_content" />
            <ImageView
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_search"
                android:layout_gravity="end"
                android:id="@+id/toolbar_search"
                android:layout_width="50dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/text_img_content" />
        </LinearLayout>
        <!-- Nội dung chính của Activity -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:orientation="vertical">

        <!-- Các mục menu trong Drawer -->
        <ImageView
            android:id="@+id/logo_duckfood_ngang"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_duckfood_ngang"
            android:contentDescription="@string/text_img_content" />
        <TextView
            android:id="@+id/tv_menu_home"
            android:text="@string/text_menu_home"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:padding="12dp"
            android:gravity="center"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/icon_home" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/tv_menu_fav_list"
            android:text="@string/text_menu_fav_list"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="12dp"
            app:drawableStartCompat="@drawable/icon_favorite" />
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
